--- a/index.html
+++ b/index.html
@@ -1,215 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaung Photography</title>
-
-    <!-- magnific-popup css cdn link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-
-    <!-- custom css file link  -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+    <title>Thura Kaung Khant</title>
 </head>
+
 <body>
-    <h1>Thura Kaung Khant (Kaung Photography)</h1>
+     <nav>
+        <div class="logo">
+            <img src="assets/IMG_9187.CR2">
+            <a href="#">Thura Kaung Khant</a>
+        </div>
+        <div class="nav-links">
+            <a class="selected" href="index.html">Home</a>
+            <a href="works.html">Works</a>
+            <a href="photo.html">Photo</a>
+            <a href="blog.html">Phone</a>
+            <a href="about.html">About</a>
+        </div>
+    </nav>
 
-
-<div class="gallery">
-
-    <ul class="controls">
-        <li class="buttons active" data-filter="all">all</li>
-        <li class="buttons" data-filter="ice-cream">School</li>
-        <li class="buttons" data-filter="chocolate">Weeding</li>
-        <li class="buttons" data-filter="cake">Potrait</li>
-        <li class="buttons" data-filter="juice">Old Photo</li>
-        <li class="buttons" data-filter="sandwich">sandwich</li>
-    </ul>
-
-    <div class="image-container">
-
-        <a href="img/1.JPG" class="image ice-cream">
-           <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/1.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/2.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/2.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/3.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/3.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/4.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/4.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/5.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/5.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/6.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/6.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/7.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/7.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/8.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/8.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/9.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/9.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/10.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/10.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/11.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/11.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/12.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/12.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/13.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/13.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/14.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/14.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/15.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/15.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/16.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/16.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/17.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/17.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/18.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/18.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/19.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/19.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/20.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/20.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/21.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/22.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="img/23.JPG" class="image ice-cream">
-            <h3>2023-2024 (Nat Hpan Kwin)</h3>
-            <img src="img/23.JPG" alt="2022-2023" title="2023-2024 (Nat Hpan Kwin)">
-        </a>
-        <a href="images/ice-cream3.jpg" class="image ice-cream">
-            <img src="images/ice-cream3.jpg" alt="">
-        </a>
-
-        <a href="images/chocolate1.jpg" class="image chocolate">
-            <img src="images/chocolate1.jpg" alt="">
-        </a>
-        <a href="images/chocolate2.jpg" class="image chocolate">
-            <img src="images/chocolate2.jpg" alt="">
-        </a>
-
-        <a href="images/cake1.jpg" class="image cake">
-            <img src="images/cake1.jpg" alt="">
-        </a>
-        <a href="images/cake2.jpg" class="image cake">
-            <img src="images/cake2.jpg" alt="">
-        </a>
-        <a href="images/cake3.jpg" class="image cake">
-            <img src="images/cake3.jpg" alt="">
-        </a>
-        <a href="images/cake4.jpg" class="image cake">
-            <img src="images/cake4.jpg" alt="">
-        </a>
-        <a href="images/cake5.jpg" class="image cake">
-            <img src="images/cake5.jpg" alt="">
-        </a>
-
-        <a href="images/juice1.jpg" class="image juice">
-            <img src="images/juice1.jpg" alt="">
-        </a>
-        <a href="images/juice2.jpg" class="image juice">
-            <img src="images/juice2.jpg" alt="">
-        </a>
-        <a href="images/juice3.jpg" class="image juice">
-            <img src="images/juice3.jpg" alt="">
-        </a>
-
-        <a href="images/sandwich1.jpg" class="image sandwich">
-            <img src="images/sandwich1.jpg" alt="">
-        </a>
-        <a href="images/sandwich2.jpg" class="image sandwich">
-            <img src="images/sandwich2.jpg" alt="">
-        </a>
-        <a href="images/sandwich3.jpg" class="image sandwich">
-            <img src="images/sandwich3.jpg" alt="">
-        </a>
-        <a href="images/sandwich4.jpg" class="image sandwich">
-            <img src="images/sandwich4.jpg" alt="">
-        </a>
-
+    <div class="main">
+        <div class="info">
+            <h1>Welcome My Site<br>Thura Kaung Khant</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ea doloribus repudiandae quibusdam
+                voluptates non eum perferendis aut.</p>
+            <button><a href="about.html">Contact Me</a></button>
+        </div>
+        <img src="assets/photo_2024-01-23_02-02-52.jpg">
     </div>
 
-</div>
+    <div class="recent">
+        <div class="header">
+            <h1>Phone Firmware</h1>
+            <a href="blog.html">View all</a>
+        </div>
+        <div class="wrapper">
+            <div class="box">
+                <h3>Xiaomi</h3>
+                <p>ipsum dolor sit ametLorem ipsum dolor sit amet, consectetur adipiscing elitipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                <a href="https://www.mi.com/global/" target="_blank"><button>Open Site</button></a>
+            </div>
+            <div class="box">
+                <h3>Vivo</h3>
+                <p>ipsum dolor sit ametLorem ipsum dolor sit amet, consectetur adipiscing elitipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                <a href="https://www.vivo.com/en" target="_blank"><button>Open Site</button></a>
+            </div>
+            <div class="box">
+                <h3>Oppo</h3>
+                <p>ipsum dolor sit ametLorem ipsum dolor sit amet, consectetur adipiscing elitipsum dolor sit ametLorem ipsum dolor sit amet</p>
+                <a href="https://www.oppo.com/mm/" target="_blank"><button>Open Site</button></a>
+            </div>
+        </div>
 
+    <div class="separator">
+        <h4>Featured Works</h4>
+    </div>
 
-<!-- jquery cdn link  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <div class="featured">
+        <div class="item">
+            <img src="assets/item-1.jpg">
+            <div class="details">
+                <h3>Capture Screenshots</h3>
+                <div class="item-info">
+                    <div class="year-badge">2023</div>
+                    <h4>JavaScript</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
+                    aliquam illo maxime.</p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="assets/item-2.jpg">
+            <div class="details">
+                <h3>Designing Login Form</h3>
+                <div class="item-info">
+                    <div class="year-badge">2023</div>
+                    <h4>Login Design</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
+                    aliquam illo maxime.</p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="assets/item-3.jpg">
+            <div class="details">
+                <h3>Music Platform UI</h3>
+                <div class="item-info">
+                    <div class="year-badge">2024</div>
+                    <h4>UI Design</h4>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
+                    aliquam illo maxime.</p>
+            </div>
+        </div>
+    </div>
 
-<!-- magnific popup js cdn link  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <footer>
+        <div class="socials">
+            <i class='bx bxl-facebook-square'></i>
+            <i class='bx bxl-instagram'></i>
+            <i class='bx bxl-twitter'></i>
+            <i class='bx bxl-linkedin-square'></i>
+        </div>
+        <p>Copyright ©2024, Thura Kaung Khant.</p>
+    </footer>
 
-<script>
-
-$(document).ready(function(){
-
-    $('.buttons').click(function(){
-
-        $(this).addClass('active').siblings().removeClass('active');
-
-        var filter = $(this).attr('data-filter')
-
-        if(filter == 'all'){
-            $('.image').show(400);
-        }else{
-            $('.image').not('.'+filter).hide(200);
-            $('.image').filter('.'+filter).show(400);
-        }
-
-    });
-
-    $('.gallery').magnificPopup({
-
-        delegate:'a',
-        type:'image',
-        gallery:{
-            enabled:true
-        }
-
-    });
-
-});
-
-</script>
-    
 </body>
+
 </html>
